# ProteinCartography

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cartography_explainer.ipynb  Dockerfile  LICENSE  Makefile  README.md  Snakefile  Snakefile_demo  Snakefile_ff  Snakefile_from_folder  cartography.yml  config.yml  config_ff.yml  conftest.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
ProteinCartography/: __init__.py  aggregate_features.py  aggregate_fident.py  aggregate_foldseek_fraction_seq_identity.py  aggregate_lists.py  api_utils.py  assess_pdbs.py  blast_utils.py  calculate_annotation_distance.py  calculate_concordance.py  calculate_convergence.py  calculate_key_protid_tmscores.py  cluster_similarity.py  color_utils.py  config_utils.py  constants.py  dash-test.py  dim_reduction.py  download_pdbs.py  esmfold_apiquery.py  extract_blast_hits.py  extract_blasthits.py  extract_foldseek_hits.py  extract_foldseekhits.py  extract_input_distances.py  fetch_accession.py  fetch_uniprot_metadata.py  file_utils.py  filter_aggregated_hits.py  filter_uniprot_hits.py  foldseek_apiquery.py  foldseek_clustering.py  get_source.py  get_source_of_hits.py  leiden_clustering.py  make_dummies.py  map_refseq_ids.py  map_refseqids.py  pdb_tools.py  plot_cluster_distributions.py  (+10 more)
demo/: P60709.fasta  config_actin.yml  config_actin_small.yml
dev/: Snakefile_annot_dist
envs/: analysis.yml  annotation_distance.yml  api.yml  blast.yml  cartography-minimal-dev.yml  cartography.yml  cartography_dev.yml  cartography_pub.yml  cartography_test.yml  cartography_tidy.yml  (+8 more)
(+73 files in other folders)
