[project]
name = "ProteinCartography"
description = "A pipeline to build similarity maps of protein space"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }


[tool.ruff]
# The directories to consider when resolving first- vs. third-party imports
src = ["."]

line-length = 100
indent-width = 4

# run ruff on jupyter notebooks (this is not enabled by default)
extend-include = ["*.ipynb"]

[tool.ruff.per-file-ignores]
# ignore star and unused imports
"__init__.py" = ["F403", "F405"]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle error
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # pycodestyle warning
    "W",
]

# rule codes to ignore
ignore = []

# Allows fix for all enabled rules when `--fix` is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes, indent with spaces, and respect trailing commas
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
order-by-type = true
no-lines-before = ["future", "standard-library"]


[tool.snakefmt]
# the line length here should match the one used by ruff
line_length = 100
include = 'Snakefile|Snakefile_*'
exclude = 'dev'
